// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarButton rendering renders the expected elements 1`] = `
<IconButton
  aria-label="Test"
  className="ToolbarButton TestClass"
  disabled={true}
  icon={Object {}}
  id="test"
  tooltipText="This is a test"
/>
`;

exports[`ToolbarButton rendering renders the expected elements if active is true 1`] = `
<IconButton
  aria-label="Test"
  className="ToolbarButton ToolbarButton--active"
  icon={Object {}}
  id="test"
  tooltipText="This is a test"
/>
`;

exports[`ToolbarButton rendering renders the expected elements when className is not set 1`] = `
<IconButton
  aria-label="Test"
  className="ToolbarButton"
  disabled={true}
  icon={Object {}}
  id="test"
  tooltipText="This is a test"
/>
`;
